--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,7 +12,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.651.1",
     "@aws-sdk/lib-dynamodb": "^3.651.1",
+    "@types/node": "^22.7.4",
     "dynamodb-toolbox": "^1.8.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
