--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "media-backup-basic-operations",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "npx tsx src/index.ts",
+    "start": "npx tsx src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
